Fix display `font-size`

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -21,6 +21,7 @@
 @each $display, $value in $display-font-sizes {
     .#{$display} {
         @extend %display;
+        @include rfs($value);
     }
 }
 
