Change project name from 'Rocket' to 'auroraUI'

--- a/src/scss/abstracts/variables/_icons.scss
+++ b/src/scss/abstracts/variables/_icons.scss
@@ -2,7 +2,7 @@
 // Icons
 // =====================================================
 
-$icons-font-family: 'rocket-icons' !default;
+$icons-font-family: 'aurora-icons' !default;
 $icons: (
     'alert-triangle': '\e900',
     'apple': '\e901',
