--- a/src/scss/auroraui.scss
+++ b/src/scss/auroraui.scss
@@ -1,5 +1,5 @@
 // =====================================================
-// Style
+// auroraUI
 // =====================================================
 
 @import 'abstracts/abstracts';
