--- a/src/scss/base/fonts/_aurora-icons.scss
+++ b/src/scss/base/fonts/_aurora-icons.scss
@@ -1,14 +1,14 @@
 // =====================================================
-// Rocket icons
+// Aurora icons
 // =====================================================
 
 @font-face {
     font-family: $icons-font-family;
-    src: url('./fonts/rocket-icons/rocket-icons.eot');
-    src: url('./fonts/rocket-icons/rocket-icons.eot#iefix') format('embedded-opentype'),
-        url('./fonts/rocket-icons/rocket-icons.ttf') format('truetype'),
-        url('./fonts/rocket-icons/rocket-icons.woff') format('woff'),
-        url('./fonts/rocket-icons/rocket-icons.svg#rocket-icons') format('svg');
+    src: url('./fonts/aurora-icons/aurora-icons.eot');
+    src: url('./fonts/aurora-icons/aurora-icons.eot#iefix') format('embedded-opentype'),
+        url('./fonts/aurora-icons/aurora-icons.ttf') format('truetype'),
+        url('./fonts/aurora-icons/aurora-icons.woff') format('woff'),
+        url('./fonts/aurora-icons/aurora-icons.svg#aurora-icons') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
