--- a/src/scss/abstracts/functions/_functions.scss
+++ b/src/scss/abstracts/functions/_functions.scss
@@ -3,7 +3,7 @@
 // =====================================================
 
 @import 'math';
-@import 'utility';
+@import 'utilities';
 @import 'color-contrast';
 @import 'svg-encode';
 @import 'responsive-font-size';
