--- a/src/scss/layout/footer/_layout.scss
+++ b/src/scss/layout/footer/_layout.scss
@@ -8,7 +8,7 @@ $footer-color: $body-color !default;
 $footer-navbar-padding: 1.5rem 0 !default;
 
 $footer-bottom-padding: $footer-navbar-padding !default;
-$footer-bottom-border-top: 2px solid $gray-300 !default;
+$footer-bottom-border-top: 2px solid $light-gray !default;
 
 .footer {
     background-color: $footer-background-color;
