--- a/src/scss/layout/header/_navbar.scss
+++ b/src/scss/layout/header/_navbar.scss
@@ -8,12 +8,12 @@ $header-navbar-lv1-min-width: 200px !default;
 $header-navbar-lv1-background-color: $white !default;
 $header-navbar-lv1-background-color-md: $gray-200 !default;
 
-$header-navbar-item-lv0-border-md: 1px solid $gray-300 !default;
+$header-navbar-item-lv0-border-md: 1px solid $light-gray !default;
 
 $header-navbar-item-lv1-border: $header-navbar-item-lv0-border-md !default;
 
 $header-navbar-link-gap: 0.25rem !default;
-$header-navbar-link-color: $gray-700 !default;
+$header-navbar-link-color: $dark-gray !default;
 $header-navbar-link-color-md: $body-color !default;
 $header-navbar-link-font-size: $small-font-size !default;
 $header-navbar-link-hover-color: $body-color !default;
