--- a/src/scss/abstracts/variables/_buttons.scss
+++ b/src/scss/abstracts/variables/_buttons.scss
@@ -2,8 +2,13 @@
 // Buttons
 // =====================================================
 
-$button-padding-y: 0.375rem !default;
-$button-padding-x: $button-padding-y * 2 !default;
+// Button multipliers
+$button-padding-x-multiplier: 2 !default;
+$button-icon-margin-multiplier: div(1, $button-padding-x-multiplier) !default;
+
+// Button
+$button-padding-y: 0.75rem !default;
+$button-padding-x: $button-padding-y * $button-padding-x-multiplier !default;
 $button-background-color: transparent !default;
 $button-color: $body-color !default;
 $button-border-width: 1px !default;
@@ -22,7 +27,7 @@ $button-icon-margin: div($button-padding-x, 2) !default;
 
 // Button big
 $button-big-padding-y: $button-padding-y + 0.125rem !default;
-$button-big-padding-x: $button-big-padding-y * 2 !default;
+$button-big-padding-x: $button-big-padding-y * $button-padding-x-multiplier !default;
 $button-big-font-size: $body-font-size * 1.25 !default;
 
 $button-big-icon-width: calc(
@@ -31,8 +36,8 @@ $button-big-icon-width: calc(
 $button-big-icon-margin: div($button-big-padding-x, 2) !default;
 
 // Button small
-$button-small-padding-y: $button-padding-y - 0.125rem !default;
-$button-small-padding-x: $button-small-padding-y * 2 !default;
+$button-small-padding-y: $button-padding-y - 0.25rem !default;
+$button-small-padding-x: $button-small-padding-y * $button-padding-x-multiplier !default;
 $button-small-font-size: $body-font-size * 0.875 !default;
 
 $button-small-icon-width: calc(
