--- a/src/scss/abstracts/variables/_images.scss
+++ b/src/scss/abstracts/variables/_images.scss
@@ -7,5 +7,5 @@ $figure-margin: 0 0 1rem !default;
 
 // Figcaption
 $figcaption-margin-top: 0.5rem !default;
-$figcaption-color: $gray-700 !default;
+$figcaption-color: $dark-gray !default;
 $figcaption-font-size: $small-font-size !default;
