--- a/src/scss/layout/footer/_navbar.scss
+++ b/src/scss/layout/footer/_navbar.scss
@@ -124,7 +124,7 @@ $footer-navbar-toggle-padding-right: $footer-navbar-link-lv0-padding-x-md !defau
         cursor: pointer;
 
         &::before {
-            @include icon($footer-navbar-toggle-icon);
+            @include aurora-icon($footer-navbar-toggle-icon);
         }
     }
 }
