Replace 'aurora-icons' with '@sparkleui/sparkle-icons'

--- a/src/scss/abstracts/mixins/_mixins.scss
+++ b/src/scss/abstracts/mixins/_mixins.scss
@@ -7,4 +7,4 @@
 @import 'buttons';
 @import 'animations';
 @import 'utilities';
-@import 'aurora-icons/scss';
+@import '@sparkleui/sparkle-icons/scss';
