--- a/src/scss/layout/header/_navbar.scss
+++ b/src/scss/layout/header/_navbar.scss
@@ -148,7 +148,7 @@ $header-navbar-toggle-height: calc(
                 /* stylelint-disable-next-line max-nesting-depth */
                 &::after {
                     @include mb-up(md) {
-                        @include aurora-icon($header-navbar-toggle-icon);
+                        @include sparkle-icon($header-navbar-toggle-icon);
                     }
                 }
             }
@@ -208,7 +208,7 @@ $header-navbar-toggle-height: calc(
         cursor: pointer;
 
         &::before {
-            @include aurora-icon($header-navbar-toggle-icon);
+            @include sparkle-icon($header-navbar-toggle-icon);
         }
     }
 }
