Change repository name to 'sparkle'

--- a/src/scss/abstracts/variables/_root.scss
+++ b/src/scss/abstracts/variables/_root.scss
@@ -2,7 +2,7 @@
 // Root
 // =====================================================
 
-$prefix: 'au' !default;
+$prefix: 'sk' !default;
 
 $enable-smooth-scroll: true !default;
 $scroll-padding-top: 4.5rem !default;
