--- a/src/scss/sparkle.scss
+++ b/src/scss/sparkle.scss
@@ -1,5 +1,5 @@
 // =====================================================
-// auroraUI
+// Sparkle
 // =====================================================
 
 @import 'abstracts/abstracts';
