--- a/src/scss/abstracts/variables/_variables.scss
+++ b/src/scss/abstracts/variables/_variables.scss
@@ -2,7 +2,7 @@
 // Variables
 // =====================================================
 
-@import 'root';
+@import 'options';
 @import 'colors';
 @import 'typography';
 @import 'body';
