--- a/src/scss/base/_tables.scss
+++ b/src/scss/base/_tables.scss
@@ -3,7 +3,7 @@
 // =====================================================
 
 table {
-    &.table--mobile {
+    &.table--responsive {
         thead,
         tfoot {
             @include desktop-only;
