--- a/docs/.vitepress/theme/styles/_docs-mixins.scss
+++ b/docs/.vitepress/theme/styles/_docs-mixins.scss
@@ -5,19 +5,15 @@
         @each $tag in $tags {
             $tag: unquote($tag);
 
-            #{$tag} {
-                &:not(.docs-example #{$tag}) {
-                    @content;
-                }
+            :where(#{$tag}:not(.docs-example #{$tag})) {
+                @content;
             }
         }
     } @else {
         $tag: unquote(nth($tags, 1));
 
-        #{$tag} {
-            &:not(.docs-example #{$tag}) {
-                @content;
-            }
+        :where(#{$tag}:not(.docs-example #{$tag})) {
+            @content;
         }
     }
 }
