--- a/docs/.vitepress/theme/styles/components/vp-doc.scss
+++ b/docs/.vitepress/theme/styles/components/vp-doc.scss
@@ -49,7 +49,7 @@
         font-weight: 500;
         user-select: none;
         opacity: 0;
-        text-decoration: none !important;
+        text-decoration: none;
         transition: color 0.25s, opacity 0.25s;
 
         &:before {
